--- a/paws4adoption_mobile/app/src/main/AndroidManifest.xml
+++ b/paws4adoption_mobile/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".OrganizationActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity">
