--- a/paws4adoption_mobile/app/src/main/AndroidManifest.xml
+++ b/paws4adoption_mobile/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrgDetailActivity"></activity>
+        <activity android:name=".views.AnimalDetailsActivity"></activity>
+        <activity android:name=".OrgDetailActivity" />
         <activity android:name=".OrganizationActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserProfileActivity" />
