PROJ-166 Added animal photos to the project and the path in the db #done

--- a/paws4adoption_web/frontend/tests/acceptance.suite.yml
+++ b/paws4adoption_web/frontend/tests/acceptance.suite.yml
@@ -2,8 +2,7 @@ suite_namespace: frontend\tests\acceptance
 actor: AcceptanceTester
 modules:
     enabled:
-        - WebDriver:
-            url: http://localhost:8080
-            browser: firefox
+        - PhpBrowser:
+            url: http://localhost/paws4adoption.web.front/
         - Yii2:
             part: init
