--- a/paws4adoption_web/composer.json
+++ b/paws4adoption_web/composer.json
@@ -26,10 +26,11 @@
         "yiisoft/yii2-faker": "~2.0.0",
         "codeception/codeception": "^4.0",
         "codeception/module-asserts": "^1.0",
-        "codeception/module-yii2": "^1.0",
+        "codeception/module-yii2": "^1.1",
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "symfony/browser-kit": ">=2.7 <=4.2.4",
+        "codeception/module-phpbrowser": "^1.0"
     },
     "config": {
         "process-timeout": 1800,
