--- a/paws4adoption_web/frontend/tests/acceptance.suite.yml
+++ b/paws4adoption_web/frontend/tests/acceptance.suite.yml
@@ -7,3 +7,11 @@ modules:
               browser: firefox
         - Yii2:
             part: init
+        - Db:
+            dsn: 'mysql:host=localhost;dbname=paws4adoption_test'
+            user: 'root'
+            password: ''
+            dump: 'tests/_data/dump.sql'
+            populate: true # run populator before all tests
+            cleanup: true # run populator before each test
+            #populator: 'mysql -u $user -h $host $dbname < $dump'
