--- a/paws4adoption_web/frontend/tests/functional.suite.yml
+++ b/paws4adoption_web/frontend/tests/functional.suite.yml
@@ -4,3 +4,11 @@ modules:
     enabled:
         - Filesystem
         - Yii2
+        - Db:
+              dsn: 'mysql:host=localhost;dbname=paws4adoption_test'
+              user: 'root'
+              password: ''
+              dump: 'tests/_data/dump.sql'
+              populate: true # run populator before all tests
+              cleanup: true # run populator before each test
+              #populator: 'mysql -u $user -h $host $dbname < $dump'
