--- a/paws4adoption_web/frontend/tests/functional.suite.yml
+++ b/paws4adoption_web/frontend/tests/functional.suite.yml
@@ -11,4 +11,4 @@ modules:
               dump: 'tests/_data/dump.sql'
               populate: true # run populator before all tests
               cleanup: true # run populator before each test
-              #populator: 'mysql -u $user -h $host $dbname < $dump'
+              populator: 'mysql -u $user -h $host $dbname < $dump'
