--- a/paws4adoption_web/frontend/tests/unit.suite.yml
+++ b/paws4adoption_web/frontend/tests/unit.suite.yml
@@ -5,3 +5,11 @@ modules:
         - Yii2:
             part: [orm, email, fixtures]
         - Asserts
+        - Db:
+                dsn: 'mysql:host=localhost;dbname=paws4adoption_test'
+                user: 'root'
+                password: ''
+                dump: 'frontend/tests/_data/dump.sql'
+                populate: true # run populator before all tests
+                cleanup: true # run populator before each test
+                populator: 'mysql -u $user -h $host $dbname < $dump'
