--- a/paws4adoption_web/composer.json
+++ b/paws4adoption_web/composer.json
@@ -42,7 +42,8 @@
         "symfony/browser-kit": ">=2.7 <=4.2.4",
         "codeception/module-phpbrowser": "^1.0",
         "codeception/module-webdriver": "^1.1",
-        "codeception/module-db": "^1.0"
+        "codeception/module-db": "^1.0",
+        "codeception/specify": "^1.4"
     },
     "config": {
         "process-timeout": 1800,
