--- a/paws4adoption_web/composer.json
+++ b/paws4adoption_web/composer.json
@@ -28,7 +28,8 @@
         "kartik-v/yii2-widget-depdrop": "dev-master",
         "kartik-v/yii2-widget-fileinput": "dev-master",
         "kartik-v/yii2-widget-activeform": "dev-master",
-        "ext-json": "*"
+        "ext-json": "*",
+        "kartik-v/yii2-widget-sidenav": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
