--- a/paws4adoption_web/backend/tests/functional.suite.yml
+++ b/paws4adoption_web/backend/tests/functional.suite.yml
@@ -1,5 +1,14 @@
-suite_namespace: backend\tests\functional
+suite_namespace: frontend\tests\functional
 actor: FunctionalTester
 modules:
     enabled:
+        - Filesystem
         - Yii2
+        - Db:
+              dsn: 'mysql:host=localhost;dbname=paws4adoption_test'
+              user: 'root'
+              password: ''
+              dump: 'frontend/tests/_data/dump.sql'
+              populate: true # run populator before all tests
+              cleanup: true # run populator before each test
+              populator: 'mysql -u $user -h $host $dbname < $dump'
