--- a/paws4adoption_web/composer.json
+++ b/paws4adoption_web/composer.json
@@ -29,7 +29,8 @@
         "kartik-v/yii2-widget-fileinput": "dev-master",
         "kartik-v/yii2-widget-activeform": "dev-master",
         "ext-json": "*",
-        "kartik-v/yii2-widget-sidenav": "*"
+        "kartik-v/yii2-widget-sidenav": "*",
+        "swiftmailer/swiftmailer": "^6.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
