--- a/paws4adoption_web/backend/tests/acceptance.suite.yml
+++ b/paws4adoption_web/backend/tests/acceptance.suite.yml
@@ -13,5 +13,5 @@ modules:
             password: ''
             dump: 'backend/tests/_data/dump.sql'
             populate: true # run populator before all tests
-            cleanup: true # run populator before each test
+            cleanup: false # run populator before each test
             populator: 'mysql -u $user -h $host $dbname < $dump'
