--- a/paws4adoption_web/frontend/tests/acceptance.suite.yml
+++ b/paws4adoption_web/frontend/tests/acceptance.suite.yml
@@ -8,7 +8,7 @@ modules:
         - Yii2:
             part: init
         - Db:
-            dsn: 'mysql:host=localhost;dbname=paws4adoption_test'
+            dsn: 'mysql:host=localhost;dbname=paws4adoption'
             user: 'root'
             password: ''
             dump: 'frontend/tests/_data/dump.sql'
