Added default animal imgs

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ paws4adoption_web/composer.lock
 
 .phpunit.result.cache
 
-paws4adoption_web/frontend/web/images/animal/
+!paws4adoption_web/frontend/web/images/animal/
 
 paws4adoption_web/frontend/web/images/animal.7z
